@@ -1,3 +1,7 @@
+2016-04-25  c.hetherington  <cth@carlh.net>
+
+	* Fix saving of modified video frame rates for subtitle content.
+
 2016-04-25  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.7.15 released.
